// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component NtroFields should render all fields as disabled 1`] = `
<React.Fragment>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Author/Creator contribution statement"
    >
      <WithStyles(Grid)
        container={true}
        spacing={8}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            label="Scale/Significance of work"
            name="impactSize"
            required={true}
          >
            <WithStyles(MenuItem)
              value="minor"
            >
              Minor
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value="major"
            >
              Major
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="Creator contribution statement"
            multiline={true}
            name="impactStatement"
            placeholder="Type or cut and paste your impact statement here"
            rows={8}
            type="text"
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Non-traditional research output metadata"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISMN
                    </span>,
                    "inputFieldHint": "eg. 979-0-XXX-XXXXX-X",
                    "inputFieldLabel": "ISMN value",
                    "remindToAdd": <span>
                      Please, press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISMN",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_ismn"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_ismn_order",
                "value": "rek_ismn",
              }
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISRC
                    </span>,
                    "inputFieldHint": "eg. BRBMG0300729",
                    "inputFieldLabel": "ISRC value",
                    "remindToAdd": <span>
                      Please, press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISRC",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_isrc"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_isrc_order",
                "value": "rek_isrc",
              }
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={2}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="Volume"
            name="rek_volume"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={2}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="Issue"
            name="rek_issue"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={2}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="Start page"
            name="rek_startpage"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={2}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="End page"
            name="rek_endpage"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="Extent"
            name="rek_extent"
            placeholder="Enter total pages, size or duration of work"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="Physical description"
            name="rek_originalformat"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="Audience size"
            name="rek_audiencesize"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            label="Peer review activity"
            name="rek_peerreviewactivity"
            required={true}
          >
            <WithStyles(MenuItem)
              value={1}
            >
              Option 1
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={2}
            >
              Option 2
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={3}
            >
              Option 3
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={4}
            >
              Option 4
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={5}
            >
              Option 5
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={6}
            >
              Option 6
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="Notes"
            name="rek_notes"
            type="text"
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
</React.Fragment>
`;

exports[`Component NtroFields should render contribution statement fields as well 1`] = `
<React.Fragment>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Author/Creator contribution statement"
    >
      <WithStyles(Grid)
        container={true}
        spacing={8}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            label="Scale/Significance of work"
            name="impactSize"
            required={true}
          >
            <WithStyles(MenuItem)
              value="minor"
            >
              Minor
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value="major"
            >
              Major
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Creator contribution statement"
            multiline={true}
            name="impactStatement"
            placeholder="Type or cut and paste your impact statement here"
            rows={8}
            type="text"
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Non-traditional research output metadata"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISMN
                    </span>,
                    "inputFieldHint": "eg. 979-0-XXX-XXXXX-X",
                    "inputFieldLabel": "ISMN value",
                    "remindToAdd": <span>
                      Please, press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISMN",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_ismn"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_ismn_order",
                "value": "rek_ismn",
              }
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISRC
                    </span>,
                    "inputFieldHint": "eg. BRBMG0300729",
                    "inputFieldLabel": "ISRC value",
                    "remindToAdd": <span>
                      Please, press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISRC",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_isrc"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_isrc_order",
                "value": "rek_isrc",
              }
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={2}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Volume"
            name="rek_volume"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={2}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Issue"
            name="rek_issue"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={2}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Start page"
            name="rek_startpage"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={2}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="End page"
            name="rek_endpage"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Extent"
            name="rek_extent"
            placeholder="Enter total pages, size or duration of work"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Physical description"
            name="rek_originalformat"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Audience size"
            name="rek_audiencesize"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            label="Peer review activity"
            name="rek_peerreviewactivity"
            required={true}
          >
            <WithStyles(MenuItem)
              value={1}
            >
              Option 1
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={2}
            >
              Option 2
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={3}
            >
              Option 3
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={4}
            >
              Option 4
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={5}
            >
              Option 5
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={6}
            >
              Option 6
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Notes"
            name="rek_notes"
            type="text"
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
</React.Fragment>
`;

exports[`Component NtroFields should render default view 1`] = `
<React.Fragment>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Non-traditional research output metadata"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISMN
                    </span>,
                    "inputFieldHint": "eg. 979-0-XXX-XXXXX-X",
                    "inputFieldLabel": "ISMN value",
                    "remindToAdd": <span>
                      Please, press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISMN",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_ismn"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_ismn_order",
                "value": "rek_ismn",
              }
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISRC
                    </span>,
                    "inputFieldHint": "eg. BRBMG0300729",
                    "inputFieldLabel": "ISRC value",
                    "remindToAdd": <span>
                      Please, press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISRC",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_isrc"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_isrc_order",
                "value": "rek_isrc",
              }
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={2}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Volume"
            name="rek_volume"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={2}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Issue"
            name="rek_issue"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={2}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Start page"
            name="rek_startpage"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={2}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="End page"
            name="rek_endpage"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Extent"
            name="rek_extent"
            placeholder="Enter total pages, size or duration of work"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Physical description"
            name="rek_originalformat"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Audience size"
            name="rek_audiencesize"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            label="Peer review activity"
            name="rek_peerreviewactivity"
            required={true}
          >
            <WithStyles(MenuItem)
              value={1}
            >
              Option 1
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={2}
            >
              Option 2
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={3}
            >
              Option 3
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={4}
            >
              Option 4
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={5}
            >
              Option 5
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              value={6}
            >
              Option 6
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Notes"
            name="rek_notes"
            type="text"
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
</React.Fragment>
`;
